Store Finished just do Login

--- a/src/components/styles/Product.scss
+++ b/src/components/styles/Product.scss
@@ -29,7 +29,7 @@
      border-radius: 25px;
      border: none;
      background-color: $Third;
-     color: $First;
+     color: $Four;
      font-size: 18px;
      transition: 0.5s;
      transition-property: box-shadow;
