--- a/src/components/styles/Cart.scss
+++ b/src/components/styles/Cart.scss
@@ -58,7 +58,7 @@
      border-radius: 25px;
      border: none;
      background-color: $Third;
-     color: $First;
+     color: $Four;
      font-size: 22px;
      margin-left: 10px;
      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.423);
