--- a/src/components/styles/ShopCart.scss
+++ b/src/components/styles/ShopCart.scss
@@ -39,7 +39,7 @@
         height: 50px;
         margin-right: 30px;
         background-color: $Third;
-        color: $First;
+        color: $Four;
         font-size: 18px;
         font-weight: bold;
         border-radius: 25px;
