--- a/src/components/styles/Cart.scss
+++ b/src/components/styles/Cart.scss
@@ -110,3 +110,65 @@
               transform: rotate(360deg);
     }
   }
+
+//responsive400
+@media(max-width: 400px){
+    .cart{
+        position: relative;
+        margin-left: 0px !important;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 98%;
+        box-shadow: 0px 5px 0px $Five;
+
+        .cimage{
+            width: 50%;
+            height: 50%;
+            box-shadow: 0px 5px 20px $Third;
+        }
+        .tozih{
+            justify-content: space-around;
+            width: 98%;
+            h2{
+             margin-left: 0px;
+             font-size: 16px;
+            }
+        }
+    .count{
+        width: 90%;
+        margin-left: 0px;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10px;
+        button{
+            
+            width: 50px;
+            height: 50px;
+            margin-left: 0px;
+            font-size: 30px;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+    }
+    .tedad{
+        margin-left: 0px;
+        span{
+        position: relative;
+        margin-left: 0px;
+        top: 0px;
+        font-size: 24px;
+    }
+        
+
+        
+    }
+    .trash{
+      img{
+        width: 70% !important;
+        height: 70% !important;
+      }
+    }    
+    }
+    
+}
