--- a/src/components/styles/Navbar.scss
+++ b/src/components/styles/Navbar.scss
@@ -81,7 +81,6 @@
         
 
         a{
-         margin-right: 30px;
          display: flex;
          cursor: pointer;
          img{
@@ -128,19 +127,76 @@
                 height: 30px;
                 margin-right: 30px;
                 cursor: pointer;
+
+                a{
+                  text-decoration: none !important;
+                  background-color: $Second !important;
+                  color: $Four;
+                }
               }
               
               .shadow__btn {
-                background: $Second;
+                background: $Second !important;
                 box-shadow: 0 0 25px $Second;
               }
               
               .shadow__btn:hover {
                 box-shadow: 0 0 5px $Second,
-                            0 0 25px $Second,
-                            0 0 50px $Second,
-                            0 0 100px $Second;
+                            0 0 10px $Second,
+                            0 0 15px $Second,
+                            0 0 20px $Second;
               }
 
               
+}
+
+//responsive400
+
+@media(max-width: 400px){
+
+  .navbar{
+    height: 30px;
+    align-items: center;
+    line-height: 30px;
+  }
+
+  .navbar-item{
+    h1{
+      font-size: 24px;
+    }
+    img{
+      height: 30px;
+      
+    }
+  }
+  .navbar-item2{
+    height: 25px ;
+
+
+    a{
+       img{
+      height: 25px;
+      margin-top: 3px;
+    }
+
+    .cn{
+      z-index: 2;
+      height: 15px;
+      width: 15px;
+      position: relativab;
+      font-size: 12px;
+      top: 2px;
+      margin-left:6px;
+      background-color: $Four !important;
+      color:$Third !important;
+    }
+  }
+    .shadow__btn{
+      height: 25px;
+      font-size: 16px;
+      margin-right: 10px;
+      padding: 5px 10px;
+      box-shadow: 0 0 15px $Second;
+    }
+  }
 }
