--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 @import '@fontsource/ysabeau';
 body{
   font-family: 'Ysabeau Office', sans-serif;
-  color: #FFFFFF;
-  background-color: #33373f;
+  color:#222831;
+  background-color:#EEEEEE;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
