--- a/src/components/styles/Variables.scss
+++ b/src/components/styles/Variables.scss
@@ -1,5 +1,4 @@
-$First:#33373f;
-$Second :#43B6D8;
-$Third : #AE4BC3;
-$Four:#FFFFFF;
-$Five : #839EC0 ;
+$First:#EEEEEE;
+$Second :#222831;
+$Third : #00ADB5;
+$Four:#393E46;
