--- a/src/components/styles/ProductDetails.scss
+++ b/src/components/styles/ProductDetails.scss
@@ -1,4 +1,5 @@
 @import "Variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 body{
     background-color: $Third;    
     color: $First;
@@ -32,13 +33,14 @@ body{
 .dtitle{
     width: fit-content;
     font-size: 40px;
-    color: $Four;
+    font-family: 'Dancing Script', cursive;
+    color: $Second;
     -webkit-animation: slide-in-blurred-top 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 	        animation: slide-in-blurred-top 0.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
 }
 .description{
     font-size: 20px;
-    Color:$Five;
+    Color:$Four;
     font-weight: bold;
     -webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
@@ -47,6 +49,7 @@ body{
 .dprice{
     font-size: 24px;
     background-color:$Third;
+    color: $First;
     width:100px;
     text-align: center;
     box-shadow: 0 5px 20px rgba(125, 125, 125, 0.158);
@@ -185,7 +188,7 @@ body{
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        top: 100px;
+        top: 40px;
 
         .dimage img{
                 width: 100%;
@@ -193,7 +196,10 @@ body{
                 margin-left: -25px !important;
         }
         .dtitle{
-                font-size: 20px !important;
+                font-size: 24px !important;
+        }
+        .description{
+                font-size: 16px !important;
         }
    }     
 }
