--- a/src/components/styles/ShopCart.scss
+++ b/src/components/styles/ShopCart.scss
@@ -24,7 +24,7 @@
         left: 50px;
         font-size: 24px;
         font-weight: bold;
-        border-bottom: 3px solid $Five;
+        border-bottom: 3px solid $Third;
     }
 }
 .kharid{
@@ -39,7 +39,7 @@
         height: 50px;
         margin-right: 30px;
         background-color: $Third;
-        color: $Four;
+        color: $First;
         font-size: 18px;
         font-weight: bold;
         border-radius: 25px;
@@ -134,7 +134,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            font-size: 24px !important;
+            font-size: 20px !important;
         }
     }
 
